--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prestart": "yarn codegen",
+    "predev": "yarn codegen",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.yml"
   },
